--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -10,8 +10,8 @@
 .theme-one-light-ui, .theme-one-dark-ui {
   .tree-view, .tab-bar {
     .icon::before { // when (@ui-size) {
-      font-size: @ui-size;
-      width: @ui-size;
+      // font-size: @ui-size;
+      // width: @ui-size;
     }
   }
 }
